2005-10-29  Jim Evins  <evins@snaught.com>

	* src/glabels.c: (main):
	* src/label-barcode.c: (gl_label_barcode_finalize):
	* src/label-text.c: (gl_label_text_finalize), (set_font_family):
	* src/label.c: (gl_label_instance_init), (gl_label_finalize):
	* src/object-editor.c: (gl_object_editor_finalize):
		Another pass at valgrinding -- plugged several memory leaks.
	* src/view-text.c: (gl_view_text_new),
	(update_canvas_item_from_object_cb), (draw_hacktext):
		Commented out artifacts of edit-in-place code.
	
2005-10-28  Jim Evins  <evins@snaught.com>

	* src/canvas-hacktext.c: (gl_canvas_hacktext_set_arg):
		Fixed use of uninitialized variable.  Caught by
		d binderman <dcb314@hotmail.com>.

2005-10-27  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c: (gl_merge_evolution_get_record):
	* src/merge-vcard.c: (gl_merge_vcard_get_record),
	(parse_next_vcard):
		Additional cleanup of EDS and vcard backends.  Provided by
		Austin Henry <ahenry@users.sourceforge.net>.

2005-10-24  Jim Evins  <evins@snaught.com>

	* AUTHORS:
	* src/Makefile.am:
	* src/merge-evolution.c:
	* src/merge-evolution.h:
	* src/merge-init.c: (gl_merge_init):
	* src/merge-properties-dialog.c: (type_changed_cb):
	* src/merge-vcard.c:
	* src/merge-vcard.h:
	* src/ui-commands.c: (gl_ui_cmd_help_about):
		Added Evolution Data Server and VCard merge backends.  Original patch
		provided by Austin Henry <ahenry@users.sourceforge.net>.
	* configure.in:
		Only support EDS and VCard backends if libebook is installed.  Allow
		user to disable support, even if installed.
	
2005-10-24  Jim Evins  <evins@snaught.com>

	* AUTHORS:
	* data/templates/avery-iso-templates.xml:
	* data/templates/avery-us-templates.xml:
	* data/templates/misc-iso-templates.xml:
	* data/templates/zweckform-iso-templates.xml:
		Collected all template changes and submissions since last
		release.

2005-10-23  Jim Evins  <evins@snaught.com>

	* configure.in:
	* data/mime/Makefile.am: